# django-cache-pydantic

./: CHANGELOG.rst  README.rst  pyproject.toml  tox.ini
.github/workflows/: main.yml  test.yml
requirements/: requirements.in
src/cache_pydantic/: __init__.py  apps.py  base.py  conf.py  defaults.py  options.py
src/django_cache_pydantic/: apps.py  base.py  conf.py  defaults.py  manager.py  options.py
tests/: settings.py  test_cached_pydantic.py
