[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "django-cache-pydantic"
version = "0.0.1"
description = "Django application to integrate pydantic models into django cache with an orm interface."
keywords = [
  "cache",
  "django",
  "pydantic",
  "orm",
]
license = {text = "MIT"}
maintainers = [{name = "Ali Abharya", email = "abharya.dev@gmail.com"}]
authors = [{name = "Ali Abharya", email = "abharya.dev@gmail.com"}]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "Pydantic>=2.6",
  "Django>=4.2",
]
[project.urls]
Changelog = "https://github.com/bindruid/django-cache-pydantic/blob/main/CHANGELOG.rst"
Repository = "https://github.com/bindruid/django-cache-pydantic"

[tool.black]
target-version = ['py38']

[tool.isort]
add_imports = [
    "from __future__ import annotations"
]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false

[tool.coverage.run]
branch = true
parallel = true
source = [
    "cache_pydantic",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    ".tox/**/site-packages",
]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src/"
namespace_packages = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.rstcheck]
report_level = "ERROR"
